--- a/Airtable + GPT-3 1f62ce98b82d4d3685214c55303bc08d.md
+++ b/Airtable + GPT-3 1f62ce98b82d4d3685214c55303bc08d.md
@@ -4,6 +4,12 @@
 2. GPT-3 Prompt to API Details
 3. Integrate GPT-3 API Into Airtable
 
+[https://youtu.be/LK2D3KbLPb4](https://youtu.be/LK2D3KbLPb4)
+
+[https://youtu.be/LerLk1WLisU](https://youtu.be/LerLk1WLisU)
+
+[https://youtu.be/Vtx-S8Gtfw8](https://youtu.be/Vtx-S8Gtfw8)
+
 **Base**: ReviewReplier
 
 **Table**: Reviews
@@ -14,6 +20,23 @@
 
 1. Trigger:
 2. Script:
+
+### GPT-3 Prompt
+
+```jsx
+Write a reply to the given review. If the customer has any concerns, address them.
+
+Review: One of the worst hyderabadi briyani i have ever tasted. Visited this place due to special occasion, but the briyani served here entirely spoiled our mood. Service was quick though, masala in the briyani was not good. Briyani is below average, hence we ordered kalmi chicken, which was okay and upto the mark. I don't suggest this place if you really wish to taste the original Hyderabad briyani
+Replay: We understand you did not like the food, which prompted you to give us this feedback. We would like to apologise for the overall experience. Please give us another opportunity and we will do everything possible to give you a memorable experience
+
+##
+
+Review: My journey with paradise is along one. Our family is a hard core fan of Paradise biryanis. We tried fiery kababs and fiery boneless chicken biryani which were both yummy. Thank you Paradise for never disappointing us
+Vegetarian options: The limited veg options are all good to try
+Replay: Thank you for visiting us and giving us a great feedback overall. We would like to host you again at our Outlet.
+
+##
+```
 
 ### Accessing Table or Input
 
