--- a/Langchain RAG Course 2024/LangChain_Conversational_RAG_Crash_Course_From_Basics_to_Production_Part_1.ipynb
+++ b/Langchain RAG Course 2024/LangChain_Conversational_RAG_Crash_Course_From_Basics_to_Production_Part_1.ipynb
@@ -35,6 +35,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Video Link : https://youtu.be/38aMTXY2usU?si=biEsG2w4QLOBFyt7"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
